--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
 
 
 </body>
-<script src="/js/proyecto1.js"></script>
+<!---<script src="/js/proyecto1.js"></script>-->
+<script src="/js/array.js"></script>
 </html>
