--- a/index.html
+++ b/index.html
@@ -38,5 +38,5 @@
 
 </body>
 <!---<script src="/js/proyecto1.js"></script>-->
-<script src="/js/array.js"></script>
+<!----<script src="/js/array.js"></script>-->
 </html>
