incomprorar evanto en DOM

--- a/javascrip.html
+++ b/javascrip.html
@@ -26,6 +26,25 @@
         </h2>
     </div>
 
+    < div  class =" divForm " >
+    < formulario  clase =" formulario " id =" formularioControlado " >
+        < clase de entrada  =" entrada " marcador de posición =" Nombre "/>
+        < clase de entrada  =" entrada " marcador de posición =" Apellido "/>
+        < clase de entrada  =" entrada " marcador de posición =" Teléfono "/>
+        < clase de entrada  =" entrada " marcador de posición =" Contraseña "/>
+        < clase de entrada  =" entrada repass " marcador de posición =" Repetir contraseña "/>
+    </ formulario >
+    < boton  class =" input " id =" controlAccept " > Aceptar Exterior </ boton >
+</ div >
+< input  id =" formName " placeholder =" Ingrese el nombre del formulario " >
+< button  id =" bCreateForm " > Crear formulario </ button >
+< button  id =" bDeleteForm " > Borrar Formulario </ button >
+< div  id =" crearForma " clase =" divForm " >
+</ div >
+</ div >
+
+
+
 
 
 
@@ -39,4 +58,5 @@
 </body>
 <!---<script src="/js/proyecto1.js"></script>-->
 <!----<script src="/js/array.js"></script>-->
+<script src="/js/ejercicion-con-DOM.js"></script>
 </html>
