--- a/javascrip.html
+++ b/javascrip.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/ejercicio-con-dom.css">
     <title>Document</title>
 </head>
 
@@ -26,23 +27,16 @@
         </h2>
     </div>
 
-    < div  class =" divForm " >
-    < formulario  clase =" formulario " id =" formularioControlado " >
-        < clase de entrada  =" entrada " marcador de posición =" Nombre "/>
-        < clase de entrada  =" entrada " marcador de posición =" Apellido "/>
-        < clase de entrada  =" entrada " marcador de posición =" Teléfono "/>
-        < clase de entrada  =" entrada " marcador de posición =" Contraseña "/>
-        < clase de entrada  =" entrada repass " marcador de posición =" Repetir contraseña "/>
-    </ formulario >
-    < boton  class =" input " id =" controlAccept " > Aceptar Exterior </ boton >
-</ div >
-< input  id =" formName " placeholder =" Ingrese el nombre del formulario " >
-< button  id =" bCreateForm " > Crear formulario </ button >
-< button  id =" bDeleteForm " > Borrar Formulario </ button >
-< div  id =" crearForma " clase =" divForm " >
-</ div >
-</ div >
-
+    <div class="divForm">
+        <form class="form" id="formControlado">
+            <input class="input" placeholder="Nombre"/>
+            <input class="input" placeholder="Ciudad"/>
+            <input class="input" placeholder="Teléfono"/>
+            <input class="input" placeholder="Codigo postal"/>
+        </form>
+        <button class="input" id="controlAccept">Aceptar Exterior</button>
+   
+</div>
 
 
 
