asiendo ejercicio con destruturacio em javascript

--- a/javascrip.html
+++ b/javascrip.html
@@ -50,7 +50,8 @@
 
 
 </body>
-<!---<script src="/js/proyecto1.js"></script>-->
-<!----<script src="/js/array.js"></script>-->
-<script src="/js/ejercicion-con-DOM.js"></script>
+<!--<script src="/js/proyecto1.js"></script>-->
+<!--<script src="/js/array.js"></script>-->
+<!--<script src="/js/ejercicion-con-DOM.js"></script>-->
+<script src="/js/destruturacion.js"></script>
 </html>
