cree mi propia libreria en javacript

--- a/javascrip.html
+++ b/javascrip.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+ <!----  <meta name="viewport" content="width=, initial-scale=1.0">-->
     <link rel="stylesheet" href="/css/ejercicio-con-dom.css">
     <title>Document</title>
 </head>
@@ -53,5 +53,6 @@
 <!--<script src="/js/proyecto1.js"></script>-->
 <!--<script src="/js/array.js"></script>-->
 <!--<script src="/js/ejercicion-con-DOM.js"></script>-->
-<script src="/js/destruturacion.js"></script>
+<!--<script src="/js/destruturacion.js"></script>-->
+<script src="/js/libreria.js"></script>
 </html>
